# claw-code-rust

./: Cargo.toml  README.md
crates/claw-cli/: Cargo.toml
crates/claw-cli/src/: config.rs  main.rs  onboarding.rs
crates/compact/: Cargo.toml
crates/compact/src/: budget.rs  lib.rs  strategy.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  message.rs  query.rs  session.rs
crates/core/tests/: L1_basic_loop.rs  L2_error_recovery.rs  L3_budget_compact.rs  L4_lifecycle.rs  e2e_ollama.rs
crates/core/tests/harness/: builders.rs  mod.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/permissions/: Cargo.toml
crates/permissions/src/: lib.rs  policy.rs  rules.rs  types.rs
crates/provider/: Cargo.toml
crates/provider/src/: anthropic.rs  lib.rs  openai_compat.rs  provider.rs  request.rs  response.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: lib.rs  manager.rs  task.rs
crates/tools/: Cargo.toml
crates/tools/src/: bash.rs  context.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  orchestrator.rs  registry.rs  tool.rs
goal/: goal.md  query-runtime.md
