[package]
name = "claw-tools"
description = "Tool trait, registry, execution orchestration, and built-in tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
claw-permissions = { workspace = true }
claw-provider = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
